--- a/configs/dialogue.yaml
+++ b/configs/dialogue.yaml
@@ -46,6 +46,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Arts_19.wav
       createAnchor35: false
@@ -72,6 +73,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Business_13.wav
       createAnchor35: false
@@ -98,6 +100,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Comedy_4.wav
       createAnchor35: false
@@ -124,6 +127,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Education_11.wav
       createAnchor35: false
@@ -150,6 +154,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Fiction_48.wav
       createAnchor35: false
@@ -176,6 +181,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Health_and_Fitness_16.wav
       createAnchor35: false
@@ -202,6 +208,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/History_33.wav
       createAnchor35: false
@@ -228,6 +235,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Kids_and_Family_37.wav
       createAnchor35: false
@@ -254,6 +262,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Leisure_45.wav
       createAnchor35: false
@@ -280,6 +289,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Mental_Health_51.wav
       createAnchor35: false
@@ -306,6 +316,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Music_23.wav
       createAnchor35: false
@@ -332,6 +343,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/News_8.wav
       createAnchor35: false
@@ -358,6 +370,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Science_and_Technology_29.wav
       createAnchor35: false
@@ -384,6 +397,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Society_and_Culture_1.wav
       createAnchor35: false
@@ -410,6 +424,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/Sports_27.wav
       createAnchor35: false
@@ -436,6 +451,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/True_Crime_36.wav
       createAnchor35: false
@@ -462,6 +478,7 @@ pages:
         <li> <span class="highlight">80 - 100  (Excellent):</span> The dialogue sounds completely natural, like a real, spontaneous conversation between people. </li>
         </ul>
       showWaveform: true
+      switchBack: true
       enableLooping: false 
       reference: configs/resources/audio/dialogue_samples/reference/TV_and_Film_41.wav
       createAnchor35: false
